--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "exports": {
     "./button": "./src/button.tsx",
+    "./wrapper": "./src/wrapper.tsx",
+    "./skeleton": "./src/skeleton.tsx",
     "./card": "./src/card.tsx",
     "./code": "./src/code.tsx",
     "./util": "./src/lib/utils.ts"
