--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,6 +6,8 @@
     "./button": "./src/button.tsx",
     "./wrapper": "./src/wrapper.tsx",
     "./skeleton": "./src/skeleton.tsx",
+    "./input": "./src/input.tsx",
+    "./label": "./src/label.tsx",
     "./card": "./src/card.tsx",
     "./code": "./src/code.tsx",
     "./util": "./src/lib/utils.ts"
@@ -18,12 +20,15 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@turbo/gen": "^1.12.4",
-    "@types/node": "^20.11.24",
     "@types/eslint": "^8.56.5",
+    "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "eslint": "^8.57.0",
     "react": "^18.2.0",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@radix-ui/react-label": "^2.0.2"
   }
 }
