--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
     "@repo/ui": "workspace:*",
+    "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.8",
     "next": "^14.1.1",
     "react": "^18.2.0",
