--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node": ">=18"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.0.15",
     "@radix-ui/react-slot": "^1.0.2",
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.0",
