--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,8 +15,7 @@
     "@supabase/supabase-js": "^2.39.8",
     "next": "^14.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-select-country-list": "^2.2.3"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.1.1",
