--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "@repo/ui": "workspace:*",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.8",
+    "axios": "^1.6.8",
     "next": "^14.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
